--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langgraph-checkpoint-postgres>=3.0.2",
     "langgraph-store-mongodb>=0.1.1",
     "langmem>=0.0.30",
+    "loguru>=0.7.3",
     "psycopg[binary]>=3.3.2",
     "pymongo>=4.15.5",
     "python-dotenv>=1.2.1",
