--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-TELEGRAM_BOT_TOKEN=
-GOOGLE_API_KEY=
-OPENAI_API_KEY=
-MONGO_URI=
-LLM_MODEL=gemini-2.5-flash
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+OPENAI_API_KEY=your-openai-api-key-here
+MONGO_URI=mongodb://localhost:27017
+LLM_MODEL=gpt-4o-mini
