refactor: adjust temperature setting for LLM and enhance system prompt clarity

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+# Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+
+# OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
-MONGO_URI=mongodb://localhost:27017
 LLM_MODEL=gpt-4o-mini
+
+# MongoDB Configuration
+MONGO_URI=your-atlas-mongodb-uri-here
+DB_NAME=telegram_bot
+COLLECTION_NAME=chat_history
+
+# Embeddings Configuration (optional - uses OpenAI by default)
+EMBEDDINGS_MODEL=text-embedding-3-small
