--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-google-genai>=4.1.2",
     "langchain-mongodb>=0.9.0",
     "langchain-openai>=1.1.6",
+    "langfuse>=3.11.2",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-mongodb>=0.3.0",
     "langgraph-checkpoint-postgres>=3.0.2",
