--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langgraph-store-mongodb>=0.1.1",
     "langmem>=0.0.30",
     "loguru>=0.7.3",
+    "motor>=3.7.1",
     "pip-audit>=2.10.0",
     "psycopg[binary]>=3.3.2",
     "pymongo>=4.15.5",
